# MyStudy

./: .gitignore  .gitmodules  README.md
docs/: CMakeLists.txt  aoscore_install_usbver.txt
docs/certs/: Aos-OEM-Issuring-CA-chain.pem  aos-user-oem.p12  aos-user-sp.p12  ca-bundle.crt  gsrsaovsslca2018.crt  oem-Fusion-Root-CA-chain.pem  scsk_chained.pem  scsk_server.crt  scsk_server.pem
docs/outputs/: MyHTTPsComm.txt  responceFromServer.html  responce_from_server.html  response.html
docs/shelllogs/: Xen_Dom0_console.txt  Xen_diagnostic_log.txt  aoscloud_settings_sdmdev2log.txt  aoscore_install_and_commands.txt  aoscore_reboot_and_commands.txt  aoscore_reinstall.log.txt  aoscore_tailscale_install.txt  aoscore_var_aos_directry.txt  device_access_checks.txt  device_checks_250423.txt  device_controll_check.txt  device_controll_test.txt  executable_commands.txt  log0509.txt  wireless_controll_test.txt
src/: Average.java  BinSearch.java  BubbleSort.php  CMakeLists.txt  CountSpace.java  FizzBuzz.c  FizzBuzz.cpp  FizzBuzz.hx  FizzBuzz.java  FizzBuzz2.c  MyCAN_Socket  QuickSort.js  SelectionSort.bas  SelectionSort.java  SelectionSort.swift  ShellSort.java  ShellSort.php  Swap.java  average.bas  average.js  average.php  average.swift  binSearch.js  bubbleSort.js  bubblesort.bas  bubblesort.swift  count_space.js  count_space.rb  count_space.vbs  count_space2.js  count_space2.rb  fisherYatesShuffle.js  fizzbuzz.awk  fizzbuzz.bas  fizzbuzz.bash  fizzbuzz.bat  fizzbuzz.f90  fizzbuzz.go  fizzbuzz.groovy  fizzbuzz.hsp  (+61 more)
src/FizzBuzz Variety Sample Codes/: FizzBuzz.xlsm  add.wat  fizzbuzz-octave.m  fizzbuzz.applescript  fizzbuzz.as  fizzbuzz.brainf  fizzbuzz.c  fizzbuzz.cpp  fizzbuzz.cs  fizzbuzz.d  fizzbuzz.dart  fizzbuzz.elm  fizzbuzz.erl  fizzbuzz.exs  fizzbuzz.fs  fizzbuzz.fsx  fizzbuzz.hs  fizzbuzz.js  fizzbuzz.lisp  fizzbuzz.nim  fizzbuzz.p6  fizzbuzz.prolog  fizzbuzz.py  fizzbuzz.rb  fizzbuzz.rs  fizzbuzz.sb3  fizzbuzz.scala  fizzbuzz.ts  fizzbuzz.vb  fizzbuzz.wat  fizzbuzz2.cs  fizzbuzz2.go  fizzbuzz2.py  fizzbuzz2.rb  hello.asm  image.pde  kuku.html  make9x9.js  readme.txt  wasm_loader.js
src/appendix/: escapeMaze_1.py  escapeMaze_2.py  fisherYatesShuffle.py  objectSort.py
src/chap3_4_var/: Var.java  var.bas  var.c  var.cs  var.js  var.php  var.py  var.sb2  varbasic.txt
src/chap4_2_sum/: Sum.java  sum.bas  sum.c  sum.sb2  sum.swift  sumbasic.txt
src/chap4_3_average/: Average.java  average.bas  average.c  average.js  average.sb2  averagebasic.txt
src/chap4_4_minMax/: Max.java  minMax.c  minMax.php  minMax.sb2
src/chap4_5_swap/: swap.c  swap.cs  swap.php  swap.sb2  swap.swift
src/chap5_2_linearSearch/: LinerSearch.java  linerSearch.bas  linerSearch.cs  linerSearch.js  linerSearch.py  linerSearch.sb2  linerSearch2.sb2
src/chap6_2_bubbleSort/: bubbleSort.bas  bubbleSort.c  bubbleSort.java  bubbleSort.sb2  bubblesort.py
src/chap6_3_selectionSort/: SelectionSort.bas  SelectionSort.php  SelectionSort.py  SelectionSort.sb2
src/chap6_4_insertSort/: InsertSort.sb2  insertSort.swift
src/chap6_5_shellSort/: ShellSort.c  ShellSort.cs  ShellSort.py  ShellSort.swift  shellSort.bas  shellSort.js  shellSort.sb2
src/chap6_6_quickSort/: QuickSort.c  QuickSort.java  QuickSort.php  QuickSort.py  QuickSort.swift
src/chap_5_3_binarySearch/: binSearch.bas  binSearch.c  binSearch.cs  binSearch.php  binSearch.swift  binarySearch.sb2  binsearchBasic.txt
src/cpp/: FizzBuzz.c  FizzBuzz2.c  MYmexCor.c  ProgramExample_Appendix1.c  Program_Example1.c  QuickSort.cs  SelectionSort.c  SelectionSort.cs  ShellSort.c  average.cs  binSearch.c  bubblesort.cs  count_space.c  fizzbuzz-excel.cls  fizzbuzz.as.cpgz  fizzbuzz.cobol  fizzbuzz.coffee  fizzbuzz.cr  getHTML_notssl.c  getHTML_openssl.c  getHTML_wolfssl.c  insertSort.c  insertSort.cs  linerSearch.c  memory1.c  memory2.c  minMax.cs  myAPI_sample.c  myBluetooth_sample.c  (+41 more)
(+12333 files in other folders)
